@@ -26,6 +26,7 @@
   - =lisp-mode=: on =TAB= hit show possible completions (or indent line).
 
 *** Changed:
+  - Binding for buffers rotation changed from =s-r= to =C-c r=.
   - Switch from public domain to =AGPL= license.
   - Switch from the namespace =yet/= to =yet-=.
   - Move =desktop-save-mode= settings to ~init-lifecycle.el~.
